# VolleyballSingleTurnier

./: .gitignore  LICENSE.md  README.md
doc/: questions.txt
doc/besprechungsprotokolle/: 2019_01_20 Klassendiagramm und Roadmap.txt  2019_10_30 Lastenheft.txt  2020_01_27 Fragenrunde.txt  2020_02_05 Fragenrunde.txt  2020_02_10 Fragenrunde .txt  2020_02_17 Fragenrunde.txt  2020_02_24 Fragenrunde.txt  2020_03_02 Fragenrunde.txt  2020_03_11 Fragenrunde.txt
doc/doxygen/: Doxyfile
doc/klassendiagramm/: Klassendiagramm v1.mdj  Model.mdj  View.mdj
doc/pflichtenheft/: Pflichtenheft.docx
generateRandomData/data/: players.csv
generateRandomData/src/: main.py
rsrc/: resources.qrc  resources.rc
rsrc/database/: DDL_DatabaseInserts.sql  DDL_DatabaseSchema.sql  DDL_DatabaseSchemaMariaDB.sql  DDL_DatabseInserts.sql  FinishCombination.json
setup/: InnoSetupVolleyball.iss
src/: CMakeLists.txt  constantstorage.h  main.cpp  mainmenu.ui  mainwindow.cpp  mainwindow.h  sportveranstaltung.pro
src/Model/: create_volleyball_game_board.cpp  create_volleyball_game_board.h  game.cpp  game.h  gameManagement.cpp  gameManagement.h  gameboard.cpp  gameboard.h  model.cpp  model.h  player.cpp  player.h  playerManagement.cpp  playerManagement.h  playerStatistics.cpp  playerStatistics.h  playermanagement.cpp  playermanagement.h  playerstatistics.cpp  playerstatistics.h  referee.cpp  referee.h  sqliteConnector.cpp  sqliteConnector.h  statistics.cpp  statistics.h  tournament.cpp  tournament.h  viewer.cpp  viewer.h
src/View/: createTournamentPopup.cpp  createTournamentPopup.h  dartboard.cpp  dartboard.h  dartboardViewer.cpp  dartboardViewer.h  dartboardviewer.cpp  dartboardviewer.h  dialogdartboard.cpp  dialogdartboard.h  dialogdartboard.ui  drilldownChart.cpp  drilldownChart.h  drilldownSlice.cpp  drilldownSlice.h  drilldownslice.cpp  gameboard.cpp  gameboard.h  gameboardWindow.cpp  gameboardWindow.h  loadTournamentPopup.cpp  loadTournamentPopup.h  mainmenu.cpp  mainmenu.h  mainmenu.ui  mainwindow.ui  menubutton.cpp  menubutton.h  playerManagementWindow.cpp  playerManagementWindow.h  playermanagementWindow.cpp  playermanagementWindow.h  playermanagementWindow.ui  playermanagment.cpp  playermanagment.h  playermanagment.ui  refereePopupBustLeg.cpp  refereePopupBustLeg.h  refereePopupWinningLeg.cpp  refereePopupWinningLeg.h  (+50 more)
